ligolang/src/test/contracts/negative/deep_pattern_matching/pm_fail7.mligo
type foo = A | B

let t = fun (x: foo) ->
  match x with
  | A -> "hey"
  | B -> 2